<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treasure Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_create_menu">Create Menu</string>
    <string name="str_take_order">Take Order</string>
    <string name="str_view_balances">View Balances</string>
    <string name="str_dish_name">Dish Name</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_price">Price</string>
    <string name="str_save">Save</string>
    <string name="str_view_menu">View Menu</string>
    <string name="str_modify_menu">Modify Menu</string>
    <string name="str_delete">Delete</string>
    <string name="str_are_you_sure">Are you sure?</string>
    <string name="str_are_you_sure_you_want_to_delete">Are you sure you want to delete this dish from Menu?</string>
    <string name="str_dish">Dish</string>
    <string name="str_num_items">Number of items</string>
    <string name="str_date">Date</string>
    <string name="str_name">Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_add_dish">Add Dish</string>
    <string name="str_total_price">Total Price (in $)</string>
    <string name="str_save_order">Save Order</string>
    <string name="str_view_order">View Order</string>
    <string name="str_no_order_for_this_date">No Order for this date</string>
    <string name="str_total_balance">Total Balance:</string>
    <string name="str_delivered">Delivered</string>
    <string name="str_order">Order</string>
    <string name="str_accept_payment">Accept Payment</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_accept">Accept</string>
    <string name="str_customer_name">Customer Name</string>
    <string name="str_payment">Payment</string>
    <string name="str_dollar">$</string>
    <string name="str_payment_saved">Payment Saved</string>
    <string name="str_new_balance">New Balance is $</string>
    <string name="str_ok">OK</string>
    <string name="str_view_tables">View Tables</string>
    <string name="str_view_payments">View Payments</string>
    <string name="str_select_month">Select Month</string>
    <string name="str_payments_received">Payments Received</string>

</resources>
