<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <Button 
        android:id="@+id/id_create_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_create_menu" />
    
    <Button 
        android:id="@+id/id_take_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_create_menu"
        android:layout_centerVertical="true"
        android:text="@string/str_take_order" />
    
    <Button 
        android:id="@+id/id_view_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_take_order"
        android:layout_centerVertical="true"
        android:text="@string/str_view_order" />
    
    <Button 
        android:id="@+id/id_view_balances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_view_order"
        android:layout_centerVertical="true"
        android:text="@string/str_view_balances" />
    
    <Button 
        android:id="@+id/id_view_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_view_balances"
        android:layout_centerVertical="true"
        android:text="@string/str_view_menu" />
    
    <Button 
        android:id="@+id/id_modify_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_view_menu"
        android:layout_centerVertical="true"
        android:text="@string/str_modify_menu" />
    
    <Button 
        android:id="@+id/id_view_tables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_modify_menu"
        android:layout_centerVertical="true"
        android:text="@string/str_view_tables" />
</RelativeLayout>
