<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <TextView
        android:id="@+id/label_dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_dish_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_dish_name"
        android:layout_marginBottom="15dp" />
    <!--  -->

    <TextView
        android:id="@+id/label_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_dish_name"
        android:text="@string/str_quantity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_quantity"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_quantity"
        android:text="@string/str_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textview_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_price"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_price"
        android:layout_margin="20dp"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:text="@string/str_delete" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/str_save" />
    </LinearLayout>

</RelativeLayout>