<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/id_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="5" >

        <TextView
            android:id="@+id/id_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingRight="5dp"
            android:text="@string/str_customer_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/id_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_balance_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_name_container"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="5" >

        <TextView
            android:id="@+id/id_balance_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingRight="5dp"
            android:text="@string/str_total_balance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/id_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_payment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_balance_container"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="5" >

        <TextView
            android:id="@+id/id_payment_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingRight="5dp"
            android:text="@string/str_payment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
			android:paddingLeft="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/id_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_dollar"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/id_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>